fix: increase link contrast on dark

--- a/modules/_buttons.scss
+++ b/modules/_buttons.scss
@@ -26,7 +26,7 @@
 		}
 
 		&:hover {
-			box-shadow: inset 0 0 0 9em rgba(255, 255, 255, 0.5);
+			box-shadow: inset 0 0 0 5em rgb(153, 153, 153, 0.8);
 		}
 
 		&:active {
